Fix Test Cases